// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`o1.json 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "keyasdf" : 3
}

================================================================================
`;

exports[`o1.json 2`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "keyasdf" : 3
}

================================================================================
`;

exports[`o1.json 3`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  keyasdf : 3
}

================================================================================
`;

exports[`o1.json 4`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  keyasdf : 3,
}

================================================================================
`;

exports[`o1.json 5`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "keyasdf": 3
}

================================================================================
`;

exports[`o2.json 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{ 2:3, "k-2":2, keyasdf:3 }

=====================================output=====================================
{ 2: 3, "k-2": 2, "keyasdf": 3 }

================================================================================
`;

exports[`o2.json 2`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{ 2:3, "k-2":2, keyasdf:3 }

=====================================output=====================================
{ 2: 3, "k-2": 2, "keyasdf": 3 }

================================================================================
`;

exports[`o2.json 3`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{ 2:3, "k-2":2, keyasdf:3 }

=====================================output=====================================
{ 2: 3, "k-2": 2, keyasdf: 3 }

================================================================================
`;

exports[`o2.json 4`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{ 2:3, "k-2":2, keyasdf:3 }

=====================================output=====================================
{ 2: 3, "k-2": 2, keyasdf: 3 }

================================================================================
`;

exports[`o2.json 5`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{ 2:3, "k-2":2, keyasdf:3 }

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "keyasdf": 3
}

================================================================================
`;

exports[`o3.json 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{  2:3, "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{ 2: 3, "k-2": 2, "keyasdf": 3 }

================================================================================
`;

exports[`o3.json 2`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{  2:3, "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{ 2: 3, "k-2": 2, "keyasdf": 3 }

================================================================================
`;

exports[`o3.json 3`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{  2:3, "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{ 2: 3, "k-2": 2, keyasdf: 3 }

================================================================================
`;

exports[`o3.json 4`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{  2:3, "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{ 2: 3, "k-2": 2, keyasdf: 3 }

================================================================================
`;

exports[`o3.json 5`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{  2:3, "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "keyasdf": 3
}

================================================================================
`;

exports[`o4.json 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  nested: {
    a:1,
    b:2
  },
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "nested"  : {
    "a" : 1,
    "b" : 2
  },
  "keyasdf" : 3
}

================================================================================
`;

exports[`o4.json 2`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  nested: {
    a:1,
    b:2
  },
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "nested"  : {
    "a" : 1,
    "b" : 2
  },
  "keyasdf" : 3
}

================================================================================
`;

exports[`o4.json 3`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  nested: {
    a:1,
    b:2
  },
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  nested  : {
    a : 1,
    b : 2
  },
  keyasdf : 3
}

================================================================================
`;

exports[`o4.json 4`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  nested: {
    a:1,
    b:2
  },
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  nested  : {
    a : 1,
    b : 2,
  },
  keyasdf : 3,
}

================================================================================
`;

exports[`o4.json 5`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  nested: {
    a:1,
    b:2
  },
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "nested": {
    "a": 1,
    "b": 2
  },
  "keyasdf": 3
}

================================================================================
`;

exports[`o5.json 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  nested: {a:1,
    b:2},
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "nested"  : { "a": 1, "b": 2 },
  "keyasdf" : 3
}

================================================================================
`;

exports[`o5.json 2`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  nested: {a:1,
    b:2},
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "nested"  : { "a": 1, "b": 2 },
  "keyasdf" : 3
}

================================================================================
`;

exports[`o5.json 3`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  nested: {a:1,
    b:2},
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  nested  : { a: 1, b: 2 },
  keyasdf : 3
}

================================================================================
`;

exports[`o5.json 4`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  nested: {a:1,
    b:2},
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  nested  : { a: 1, b: 2 },
  keyasdf : 3,
}

================================================================================
`;

exports[`o5.json 5`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  nested: {a:1,
    b:2},
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "nested": {
    "a": 1,
    "b": 2
  },
  "keyasdf": 3
}

================================================================================
`;
